@@ -14,6 +14,7 @@ if ($active24 === false || is_null($active24)) {
         ->select('id')
         ->where('last_access > ?', $dt)
         ->where('perms < ?', bt_options::PERMS_STEALTH)
+        ->where('id != 2')
         ->orderBy('username ASC');
 
     foreach ($query as $row) {
