@@ -9,6 +9,7 @@ if ($irc === false || is_null($irc)) {
         ->select('id')
         ->where('onirc = ?', 'yes')
         ->where('perms < ?',  bt_options::PERMS_STEALTH)
+        ->where('id != 2')
         ->orderBy('username ASC');
 
     foreach ($query as $row) {
