@@ -10,6 +10,7 @@ if ($active === false || is_null($active)) {
         ->select('id')
         ->where('last_access > ?', $dt)
         ->where('perms < ?',  bt_options::PERMS_STEALTH)
+        ->where('id != 2')
         ->orderBy('username ASC');
 
     foreach ($query as $row) {
