@@ -6,7 +6,8 @@
  */
 function achievement_avatar_update($data)
 {
-    global $site_config, $queries, $cache, $lang;
+    global $site_config, $queries, $cache;
+    $lang = load_language('ad_cleanup_manager');
 
     set_time_limit(1200);
     ignore_user_abort(true);
